--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <p>GENERAL SECRETARY</p>
           </div>
           <div class="box">
-              <div class="card" style="background-color: black;">
+              <div class="card" style="background-color: black; box-shadow: 15px 15px 0px rgba(120,0,120,.3);">
                   <div class="bottom">
                       <h1>Endless Exploration</h1>
                       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -60,7 +60,7 @@
         </div>
           <div class="card" style="background-image: url('https://imagizer.imageshack.com/img924/1051/LwVhxK.jpg');">
               <div class="bottom">
-                  <h1>Adamya Sharma</h1>
+                  <h1>Adamya Sharma</h1></br>
                   <ul class="social-links">
                       <li><a href="https://www.instagram.com/anureeet.cheema" aria-label="Instagram"><i class="fab fa-instagram"></i></a></li>
                   </ul>
@@ -238,7 +238,7 @@
   <div class="card" style="background-color: black; color: white; background-image: url('https://imageshack.com/i/poyKutpNj');overflow: hidden;background-size: 100% 100%;">
 
       <div class="bottom">
-          <h1>Anureet Kaur</h1></br>
+          <h1>Anureet Kaur Cheema</h1></br>
           <ul class="social-links">
             <li>
               <a href="https://www.instagram.com/anureeet.cheema?igsh=YXZ5cWNlb2hlcDB0" aria-label="Instagram">
@@ -287,7 +287,7 @@
               style="font-size: 24px; color: white"></i></a>
         </ul>
     </div>
-</div>
+  </div>
     
 </div><br>       
      
